[PL] fix bug for tooltop off centre when horizontal scrolling; fix bug for not show "not available" cells in params; only show tooltip for values > 12

--- a/foundations_ui/src/scss/views/job-cell.scss
+++ b/foundations_ui/src/scss/views/job-cell.scss
@@ -49,7 +49,7 @@
   height: $row-height;
   transition: all 0.3s ease;
   background-color: #404040;
-  position: fixed;
+  position: absolute;
   color: #fff;
   z-index: 1;
   margin-top: 5px;
